[gd_scene load_steps=4 format=2]

[ext_resource path="res://Arena.gd" type="Script" id=1]
[ext_resource path="res://ui/gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://ArenaCamera.tscn" type="PackedScene" id=3]

[node name="Arena" type="Node2D"]
script = ExtResource( 1 )

[node name="Stage" type="Node2D" parent="."]

[node name="CrateRespawn" type="Timer" parent="."]

[node name="EnemySpawn" type="Timer" parent="."]
wait_time = 1.5

[node name="Objects" type="Node2D" parent="."]

[node name="Ammo" type="Node2D" parent="."]

[node name="GameObjects" type="Node2D" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Control" parent="GUI" instance=ExtResource( 2 )]

[node name="Timers" type="Node" parent="."]

[node name="ArenaCamera" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="CrateRespawn" to="." method="_on_CrateRespawn_timeout"]
[connection signal="timeout" from="EnemySpawn" to="." method="_on_EnemySpawn_timeout"]
